--- a/MiniGameStarter/TrainingFramework/TrainingFramework.vcxproj.filters
+++ b/MiniGameStarter/TrainingFramework/TrainingFramework.vcxproj.filters
@@ -48,6 +48,12 @@
     <ClCompile Include="src\GameObject\Font.cpp">
       <Filter>TrainingFramework\src\GameObject</Filter>
     </ClCompile>
+    <ClCompile Include="src\GameManager\ResourceManagers.cpp">
+      <Filter>TrainingFramework\src\GameManager</Filter>
+    </ClCompile>
+    <ClCompile Include="src\GameObject\GameButton.cpp">
+      <Filter>TrainingFramework\src\GameObject</Filter>
+    </ClCompile>
     <ClCompile Include="src\GameStates\GameStateBase.cpp">
       <Filter>TrainingFramework\src\GameStates</Filter>
     </ClCompile>
@@ -63,11 +69,8 @@
     <ClCompile Include="src\GameStates\GSPlay.cpp">
       <Filter>TrainingFramework\src\GameStates</Filter>
     </ClCompile>
-    <ClCompile Include="src\GameManager\ResourceManagers.cpp">
-      <Filter>TrainingFramework\src\GameManager</Filter>
-    </ClCompile>
-    <ClCompile Include="src\GameObject\GameButton.cpp">
-      <Filter>TrainingFramework\src\GameObject</Filter>
+    <ClCompile Include="src\GameStates\GSCredit.cpp">
+      <Filter>TrainingFramework\src\GameStates</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -107,6 +110,12 @@
     <ClInclude Include="src\GameObject\Font.h">
       <Filter>TrainingFramework\src\GameObject</Filter>
     </ClInclude>
+    <ClInclude Include="src\GameManager\ResourceManagers.h">
+      <Filter>TrainingFramework\src\GameManager</Filter>
+    </ClInclude>
+    <ClInclude Include="src\GameObject\GameButton.h">
+      <Filter>TrainingFramework\src\GameObject</Filter>
+    </ClInclude>
     <ClInclude Include="src\GameStates\GameStateBase.h">
       <Filter>TrainingFramework\src\GameStates</Filter>
     </ClInclude>
@@ -122,14 +131,14 @@
     <ClInclude Include="src\GameStates\GSPlay.h">
       <Filter>TrainingFramework\src\GameStates</Filter>
     </ClInclude>
-    <ClInclude Include="src\GameManager\ResourceManagers.h">
-      <Filter>TrainingFramework\src\GameManager</Filter>
-    </ClInclude>
-    <ClInclude Include="src\GameObject\GameButton.h">
-      <Filter>TrainingFramework\src\GameObject</Filter>
+    <ClInclude Include="src\GameStates\GSCredit.h">
+      <Filter>TrainingFramework\src\GameStates</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="TrainingFramework.rc" />
   </ItemGroup>
 </Project>
