--- a/MiniGameStarter/TrainingFramework/TrainingFramework.vcxproj
+++ b/MiniGameStarter/TrainingFramework/TrainingFramework.vcxproj
@@ -303,7 +303,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
-    <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\GameManager\ResourceManagers.cpp" />
     <ClCompile Include="src\GameObject\Font.cpp" />
     <ClCompile Include="src\GameObject\GameButton.cpp" />
@@ -317,14 +316,21 @@
     <ClCompile Include="src\GameStates\GameStateBase.cpp" />
     <ClCompile Include="src\GameStates\GameStateMachine.cpp" />
     <ClCompile Include="src\GameStates\GSCredit.cpp" />
+    <ClCompile Include="src\GameStates\GSGameOver.cpp" />
+    <ClCompile Include="src\GameStates\GSHelp.cpp" />
     <ClCompile Include="src\GameStates\GSIntro.cpp" />
+    <ClCompile Include="src\GameStates\GSLeaderboard.cpp" />
     <ClCompile Include="src\GameStates\GSMenu.cpp" />
+    <ClCompile Include="src\GameStates\GSMode.cpp" />
     <ClCompile Include="src\GameStates\GSPlay.cpp" />
+    <ClCompile Include="src\GameStates\GSPlay_Puzzle.cpp" />
+    <ClCompile Include="src\GameStates\GSPlay_Speed.cpp" />
+    <ClCompile Include="src\GameStates\GSPuzzle.cpp" />
+    <ClCompile Include="src\GameStates\GSSetting.cpp" />
     <ClCompile Include="src\TrainingFramework.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Application.h" />
-    <ClInclude Include="src\Game.h" />
     <ClInclude Include="src\GameConfig.h" />
     <ClInclude Include="src\GameManager\ResourceManagers.h" />
     <ClInclude Include="src\GameManager\Singleton.h" />
@@ -341,10 +347,17 @@
     <ClInclude Include="src\GameStates\GameStateBase.h" />
     <ClInclude Include="src\GameStates\GameStateMachine.h" />
     <ClInclude Include="src\GameStates\GSCredit.h" />
+    <ClInclude Include="src\GameStates\GSGameOver.h" />
+    <ClInclude Include="src\GameStates\GSHelp.h" />
     <ClInclude Include="src\GameStates\GSIntro.h" />
+    <ClInclude Include="src\GameStates\GSLeaderboard.h" />
     <ClInclude Include="src\GameStates\GSMenu.h" />
+    <ClInclude Include="src\GameStates\GSMode.h" />
     <ClInclude Include="src\GameStates\GSPlay.h" />
-    <ClInclude Include="src\Settings.h" />
+    <ClInclude Include="src\GameStates\GSPlay_Puzzle.h" />
+    <ClInclude Include="src\GameStates\GSPlay_Speed.h" />
+    <ClInclude Include="src\GameStates\GSPuzzle.h" />
+    <ClInclude Include="src\GameStates\GSSetting.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
